--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ android {
 dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    implementation project(':domain')
 }
