--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.3.11'
     ext.nav_version = "1.0.0-alpha09"
+    ext.koin_version = '1.0.2'
+
     repositories {
         google()
         jcenter()
