--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
     implementation project(':domain')
+    implementation project(':network')
 
     // Koin
     implementation "org.koin:koin-android:$koin_version"
