--- a/network/build.gradle
+++ b/network/build.gradle
@@ -15,6 +15,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        buildConfigField "String", 'SERVER_URL', '"https://swapi.co/api/"'
     }
 
     buildTypes {
