Ad koin and retrofit dependencies

--- a/network/build.gradle
+++ b/network/build.gradle
@@ -14,8 +14,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
         buildConfigField "String", 'SERVER_URL', '"https://swapi.co/api/"'
+
     }
 
     buildTypes {
@@ -29,4 +29,12 @@ android {
 
 dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Koin
+    implementation "org.koin:koin-android:$koin_version"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 }
