--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.11'
     ext.nav_version = "1.0.0-alpha09"
     ext.koin_version = '1.0.2'
+    ext.retrofit_version = '2.5.0'
 
     repositories {
         google()
