--- a/network/build.gradle
+++ b/network/build.gradle
@@ -30,6 +30,8 @@ android {
 dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation project(':domain')
+
     // Koin
     implementation "org.koin:koin-android:$koin_version"
 
