--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.retrofit_version = '2.5.0'
     ext.rx_java_version = '2.2.5'
     ext.rx_android_version = '2.1.0'
+    ext.room_version = "2.0.0-alpha1"
 
     repositories {
         google()
