Add arch pagination dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     // RxJava2
     implementation "io.reactivex.rxjava2:rxandroid:$rx_android_version"
     implementation "io.reactivex.rxjava2:rxjava:$rx_java_version"
+
+    // Architecture components - Navigation
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version" // use -ktx for Kotlin
+//    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version" // use -ktx for Kotlin
 }
