--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.rx_java_version = '2.2.5'
     ext.rx_android_version = '2.1.0'
     ext.room_version = "2.0.0-alpha1"
+    ext.paging_version = "2.1.0-rc01"
 
     repositories {
         google()
