Extract Repository to data layer module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation project(':domain')
     implementation project(':network')
+    implementation project(':data')
 
     // Koin
     implementation "org.koin:koin-android:$koin_version"
