--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     ext.rx_android_version = '2.1.0'
     ext.room_version = "2.0.0-alpha1"
     ext.paging_version = "2.1.0-rc01"
+    ext.card_stack_view_version = "2.2.1"
 
     repositories {
         google()
